more work on the test framework